// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconAffix /> renders after 1`] = `
<div
  className="f1j57tyj"
>
  Child
</div>
`;

exports[`<IconAffix /> renders before 1`] = `
<div
  className="f1n3ntyo"
>
  Child
</div>
`;
